@@ -2,7 +2,7 @@ m4_define([intltool_minimum_version], [0.31])
 m4_define([xfpm_version_major],  [0])
 m4_define([xfpm_version_minor],  [8])
 m4_define([xfpm_version_micro],  [3])
-m4_define([xfpm_version_build],  [])
+m4_define([xfpm_version_build],  [r@REVISION])
 m4_define([xfpm_version_tag],[])
 m4_define([xfpm_version], [xfpm_version_major().xfpm_version_minor().xfpm_version_micro()ifelse(xfpm_version_tag(), [svn], [xfpm_version_tag().xfpm_version_build()], [xfpm_version_tag()])])
 
