@@ -1,3 +1,6 @@
+2009-08-03: Ali aliov@xfce.org
+	* Allow 1% as a critical power level option.
+
 2009-08-01: Ali aliov@xfce.org
 	* Remove image from the inhibit option of the tray icon.
 	* Check if the session is managed before changing the restart style.
